spec/e2e/field/set_evaluation_order.lit
undefined1.bar # error: [line 1] Runtime error: Undefined variable 'undefined1'.
  = undefined2;
